Email: fix styles

--- a/src/app/views/emails/layouts/default.hbs
+++ b/src/app/views/emails/layouts/default.hbs
@@ -3,7 +3,7 @@
     text-align: center;
     padding: 3em;
     margin-bottom: 2em;
-    margin-bottom: 1px solid #7158c1;
+    border-bottom: 1px solid #7158c1;
   }
   header img {
     max-width: 320px;
