Feature: setup email notifications for orders cancelation

--- a/src/app/views/emails/newOrder.hbs
+++ b/src/app/views/emails/newOrder.hbs
@@ -9,7 +9,7 @@
 <p>
   <div class="info">
     <h4>Order</h4>
-    <strong>Created at:</strong><div>{{ created_at }}</div>
+    <strong>Created on:</strong><div>{{ created_at }}</div>
     <h4>Product Info</h4>
     <strong>Name:</strong><div>{{ product }}</div>
     <h4>Recipient Info</h4>
