Feature: create email for newly created deliveryman

--- a/src/app/views/emails/layouts/default.hbs
+++ b/src/app/views/emails/layouts/default.hbs
@@ -21,6 +21,10 @@
     text-transform: uppercase;
     font-size: 0.95em;
   }
+  a {
+    color: #7159c1;
+    text-decoration: underline;
+  }
   .info {
     padding: 1em;
   }
